--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,9 @@ project(SegmentationVerification)
 
 #-----------------------------------------------------------------------------
 # Extension meta-information
-set(EXTENSION_HOMEPAGE "https://github.com/cpinter/SlicerSegmentationVerification")
-set(EXTENSION_CONTRIBUTORS "Csaba Pinter (EBATINCA, S.L.)")
-set(EXTENSION_DESCRIPTION "Tools for verifying the result of AI segmentation.")
+set(EXTENSION_HOMEPAGE "https://github.com/ImagingDataCommons/CrossSegmentationExplorer")
+set(EXTENSION_CONTRIBUTORS "Lena Giebeler")
+set(EXTENSION_DESCRIPTION "Tools for the visual inspection and comparison of multiple segmentations on the same volume.")
 set(EXTENSION_ICONURL "https://raw.githubusercontent.com/cpinter/SlicerSegmentationVerification/main/SegmentationVerification.png")
 set(EXTENSION_SCREENSHOTURLS "https://raw.githubusercontent.com/cpinter/SlicerSegmentationVerification/main/SegmentationVerification_Screenshot.png")
 set(EXTENSION_DEPENDS "NA") # Specified as a list or "NA" if no dependencies
@@ -18,8 +18,7 @@ include(${Slicer_USE_FILE})
 
 #-----------------------------------------------------------------------------
 # Extension modules
-add_subdirectory(SegmentationVerification)
-add_subdirectory(SegmentationComparison)
+add_subdirectory(CrossSegmentationExplorer)
 ## NEXT_MODULE
 
 #-----------------------------------------------------------------------------
